@@ -21,6 +21,7 @@ Current Release
 - Added a --version flag to all user tools.
 - Made a roster_user_tools.conf file, made it install with setup.py.
 - Added better documentation of dnsuphost output file.
+- Removed ListZones from MakeHostsFile.
 
 2009-09-23 release-0.5
 - Made trunk install as version 0.1
